Starting a new project and cleaning launch.json

--- a/basic-java/.vscode/launch.json
+++ b/basic-java/.vscode/launch.json
@@ -15,13 +15,8 @@
             "name": "AboutMe",
             "request": "launch",
             "mainClass": "AboutMe",
-            "projectName": "basic-java_12f532fc",
-            "args": [
-                "GIOVANE",
-                "GUIMARÃES",
-                "31",
-                "1.80"
-            ]
+            "projectName": "basic-java_12f532fc"
+
         },
         {
             "type": "java",
