--- a/basic-java/.vscode/launch.json
+++ b/basic-java/.vscode/launch.json
@@ -4,7 +4,13 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
-    
+    {
+      "type": "java",
+      "name": "Contador",
+      "request": "launch",
+      "mainClass": "DesafioControleFluxo.Contador",
+      "projectName": "basic-java_12f532fc"
+    },
     {
       "type": "java",
       "name": "SelectionProcess",
